deployment/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: joe-portfolio
  labels:
    name: joe-portfolio
